# clear_mind_api

./: pyproject.toml
client_api/: settings.py  urls.py
